[gd_scene load_steps=19 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://scripts/PlayHUD.gd" type="Script" id=3]
[ext_resource path="res://art/cenario/dark-small.jpeg" type="Texture" id=4]
[ext_resource path="res://art/cenario/mid-small.jpeg" type="Texture" id=5]
[ext_resource path="res://art/cenario/light-small.jpeg" type="Texture" id=6]
[ext_resource path="res://scripts/PickScene.gd" type="Script" id=7]
[ext_resource path="res://scripts/LoadingScene.gd" type="Script" id=8]
[ext_resource path="res://sounds/main-menu.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_color = Color( 0.160784, 0.0392157, 0.0392157, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "ui_accept"
pressed = true

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 120
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 100
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PlayHUD" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="TextureRect" type="ColorRect" parent="PlayHUD"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.831373, 0.803922, 0.588235, 1 )

[node name="Label" type="Label" parent="PlayHUD"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.175
anchor_right = 0.5
anchor_bottom = 0.175
margin_left = -598.5
margin_top = -192.5
margin_right = 598.5
margin_bottom = 191.5
custom_fonts/font = SubResource( 1 )
text = "Recycle Man"
align = 1
valign = 1

[node name="Label" type="Label" parent="PlayHUD/Label"]
anchor_left = 0.499
anchor_top = 0.746
anchor_right = 0.499
anchor_bottom = 0.746
margin_left = -222.803
margin_top = -30.464
margin_right = 222.197
margin_bottom = 30.536
custom_fonts/font = SubResource( 9 )
text = "Lixeiro Simulator"

[node name="Button" type="Button" parent="PlayHUD"]
modulate = Color( 0.941176, 0.94902, 0.960784, 1 )
anchor_left = 0.5
anchor_top = 0.841
anchor_right = 0.5
anchor_bottom = 0.841
margin_left = -210.0
margin_top = -67.1001
margin_right = 208.0
margin_bottom = 66.8999
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Play!"

[node name="PickScene" type="CanvasLayer" parent="."]
visible = false
script = ExtResource( 7 )

[node name="TextureRect" type="ColorRect" parent="PickScene"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.831373, 0.803922, 0.588235, 1 )

[node name="Label" type="Label" parent="PickScene"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.483
anchor_top = 0.213
anchor_right = 0.483
anchor_bottom = 0.213
margin_left = -556.5
margin_top = -72.3
margin_right = 556.5
margin_bottom = 72.7
custom_fonts/font = SubResource( 5 )
text = "Escolha o cenário"
align = 1

[node name="Light" type="Button" parent="PickScene"]
anchor_left = 0.208
anchor_top = 0.702
anchor_right = 0.208
anchor_bottom = 0.702
margin_left = -193.0
margin_top = -140.2
margin_right = 194.5
margin_bottom = 140.8
icon = ExtResource( 6 )

[node name="Mid" type="Button" parent="PickScene"]
anchor_left = 0.5
anchor_top = 0.706
anchor_right = 0.5
anchor_bottom = 0.706
margin_left = -189.0
margin_top = -140.6
margin_right = 198.0
margin_bottom = 140.4
icon = ExtResource( 5 )

[node name="Dark" type="Button" parent="PickScene"]
anchor_left = 0.794
anchor_top = 0.7
anchor_right = 0.794
anchor_bottom = 0.7
margin_left = -194.0
margin_top = -141.0
margin_right = 193.0
margin_bottom = 140.0
icon = ExtResource( 4 )

[node name="LoadingScene" type="CanvasLayer" parent="."]
visible = false
script = ExtResource( 8 )

[node name="TextureRect" type="ColorRect" parent="LoadingScene"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.831373, 0.803922, 0.588235, 1 )

[node name="Instructions" type="Label" parent="LoadingScene"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.274
anchor_right = 0.5
anchor_bottom = 0.274
margin_left = -658.0
margin_top = -48.4
margin_right = 660.0
margin_bottom = 48.6
custom_fonts/font = SubResource( 6 )
text = "Jogue o lixo na caçamba certa!"
autowrap = true

[node name="InstructionsCar" type="Label" parent="LoadingScene"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.506
anchor_top = 0.416
anchor_right = 0.506
anchor_bottom = 0.418
margin_left = -549.0
margin_top = -46.6
margin_right = 542.0
margin_bottom = 48.2
custom_fonts/font = SubResource( 7 )
text = "Não jogue lixo nos carros!"

[node name="LoadingLabel" type="Label" parent="LoadingScene"]
modulate = Color( 0.0431373, 0.219608, 1, 1 )
margin_left = 880.0
margin_top = 909.0
margin_right = 1399.0
margin_bottom = 1029.0
custom_fonts/font = SubResource( 8 )
text = "Loading..."

[node name="LoadingTimer" type="Timer" parent="LoadingScene"]
wait_time = 1.5

[node name="MainMenuSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="change_hud_scene" from="PlayHUD" to="." method="_on_PlayHUD_change_hud_scene"]
[connection signal="pressed" from="PlayHUD/Button" to="PlayHUD" method="_on_Button_pressed"]
[connection signal="scene_chosen" from="PickScene" to="." method="_on_PickScene_scene_chosen"]
[connection signal="pressed" from="PickScene/Light" to="PickScene" method="_on_Light_pressed"]
[connection signal="pressed" from="PickScene/Mid" to="PickScene" method="_on_Mid_pressed"]
[connection signal="pressed" from="PickScene/Dark" to="PickScene" method="_on_Dark_pressed"]
[connection signal="loading_finished" from="LoadingScene" to="." method="_on_LoadingScene_loading_finished"]
[connection signal="timeout" from="LoadingScene/LoadingTimer" to="LoadingScene" method="_on_LoadingTimer_timeout"]
